# FFmpeg-demo

./: CMakeLists.txt  README.md
HEAD/: audiooutput.h  avpacketqueue.h  decode.h  demuxthread.h  queue.h  thread.h  videooutput.h
SRC/: audiooutput.cpp  avframequeue.cpp  avpacketqueue.cpp  decode.cpp  demuxthread.cpp  log.cpp  main.cpp  videooutput.cpp
include/: state.h
